Archive2/da/5161d172771e52/output
main.cpp:6:5: error: static_assert failed "wrong size"
    static_assert(N <= 60, "wrong size");
    ^             ~~~~~~~
main.cpp:16:3: note: in instantiation of function template specialization 'add<char, 61>' requested here
  add(b); // doesnt compile
  ^
1 error generated.
